Sat Aug 28 12:35:25 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Beef up the test for whether -lm is required and add
	  a special case to force it to be for Sun's C++ compiler - there's
	  some interaction with libtool and/or shared objects which means
	  that the configure test doesn't think -lm is needed here when it
	  is.

Sat Aug 28 10:59:11 GMT 2010  Olly Betts <olly@survex.com>

	* api/matchspy.cc,common/const_database_wrapper.cc,net/tcpclient.cc,
	  tests/api_replicate.cc,tests/harness/backendmanager_remotetcp.cc,
	  tests/harness/testsuite.cc,tests/perftest/runprocess.cc,
	  unicode/utf8itor.cc: Fix to compile with Sun C++.

Sat Aug 28 10:30:08 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING,PLATFORMS: Move PLATFORMS information to the wiki and replace
	  with a pointer.

Sat Aug 28 03:15:47 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/queryoptimiser.cc: Need to avoid excess precision on m68k
	  when targetting models 68010, 68020, 68030 as well as 68000.

Tue Aug 24 05:54:27 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Update for 1.2.3.

Tue Aug 24 05:52:47 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Aug 16 16:46:19 GMT 2010  Olly Betts <olly@survex.com>

	* common/closefrom.cc: Use /dev/fd on Mac OS X.

Mon Aug 16 16:18:26 GMT 2010  Olly Betts <olly@survex.com>

	* common/closefrom.cc: Need safeerrno.h and safeunistd.h on non-Linux
	  platforms too.

Mon Aug 16 15:47:48 GMT 2010  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,common/Makefile.mk,common/closefrom.cc,
	  common/closefrom.h,configure.ac,net/progclient.cc: Use closefrom()
	  if available, otherwise provide our own implementation (optimised
	  to some extent for many platforms).

Sun Aug 15 12:43:04 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Sun Aug 15 12:11:26 GMT 2010  Olly Betts <olly@survex.com>

	* xapian-core.spec.in: Update BuildRequires to specify libuuid-devel
	  instead of e2fsprogs-devel.
