@@ -1,7 +1,7 @@
 /* api_replicate.cc: tests of replication functionality
  *
  * Copyright 2008 Lemur Consulting Ltd
- * Copyright 2009 Olly Betts
+ * Copyright 2009,2010 Olly Betts
  * Copyright 2010 Richard Boulton
  *
  * This program is free software; you can redistribute it and/or
@@ -43,7 +43,7 @@
 #include <cstdlib>
 #include <string>
 
-#include <stdlib.h> // For setenv()
+#include <stdlib.h> // For setenv() or putenv()
 
 using namespace std;
 
@@ -228,14 +228,28 @@ check_equal_dbs(const string & masterpath, const string & replicapath)
     }
 }
 
+#if 0 // Dynamic version which we don't currently need.
 static void
 set_max_changesets(int count) {
 #ifdef __WIN32__
     _putenv_s("XAPIAN_MAX_CHANGESETS", str(count).c_str());
-#else
+#elif defined HAVE_SETENV
     setenv("XAPIAN_MAX_CHANGESETS", str(count).c_str(), 1);
+#else
+    static char buf[64] = "XAPIAN_MAX_CHANGESETS=";
+    sprintf(buf + CONST_STRLEN("XAPIAN_MAX_CHANGESETS="), "%d", count);
+    putenv(buf);
 #endif
 }
+#endif
+
+#ifdef __WIN32__
+# define set_max_changesets(N) _putenv_s("XAPIAN_MAX_CHANGESETS", #N)
+#elif defined HAVE_SETENV
+# define set_max_changesets(N) setenv("XAPIAN_MAX_CHANGESETS", #N, 1)
+#else
+# define set_max_changesets(N) putenv(const_cast<char*>("XAPIAN_MAX_CHANGESETS="#N))
+#endif
 
 // #######################################################################
 // # Tests start here
