@@ -1,3 +1,10 @@
+Sat Aug 28 15:33:14 GMT 2010  Olly Betts <olly@survex.com>
+
+	* configure.ac,tests/api_replicate.cc: Solaris < 10 doesn't have
+	  setenv() so we have to use putenv() there.  And the value we set
+	  XAPIAN_MAX_CHANGESETS to is always constant currently, so set it
+	  using constant strings generated by a macro.
+
 Sat Aug 28 12:35:25 GMT 2010  Olly Betts <olly@survex.com>
 
 	* configure.ac: Beef up the test for whether -lm is required and add
